--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1,3 +1,7 @@
+Final video
+\url{https://www.youtube.com/watch?v=UsDRPjDwr8A}
+screenshots
+
 %=========================================================================================================
 
 \subsection{Case Study - St Salvator's Chapel}
