--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -285,6 +285,8 @@ Unfortunately, the precision attainable through this approach is not sufficient 
 %=========================================================================================================
 
 \section{Position Control}
+\label{second_life_position_control}
+
 In order to control the position of the Second Life avatar, sensor data are required for the position of the user in the real world. As the cultural heritage sites that VTW was intended for use upon are outdoor sites, namely those where there are traces of ruins \& clear views of the sky, GPS is the logical choice for tracking user position. GPS has been widely used as a localization technique within virtual heritage, particularly for AR applications.
 
 %***diagram showing this
